# polartools

./: .codacy.yml  .codecov.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  index.html  plotting.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  versioneer.py
.codacy/: codacy.config.json  configure-codacy-summary.json
.github/workflows/: codeql.yml  docs.yml  python-package-conda.yml  python-package-conda_new.yml  python-publish.yml
dev/: genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  release-history.html  search.html  searchindex.js
dev/_modules/: index.html
dev/_modules/polartools/: absorption.html  area_detector_handlers.html  diffraction.html  load_data.html  manage_database.html  pressure_calibration.html  process_images.html
dev/_sources/examples/: load_data.md.txt  pressure_calibration.md.txt
dev/_static/: documentation_options.js
dev/api/polartools/: index.html
dev/api/polartools/absorption/: index.html
dev/api/polartools/area_detector_handlers/: index.html
dev/api/polartools/diffraction/: index.html
dev/api/polartools/load_data/: index.html
dev/api/polartools/manage_database/: index.html
dev/api/polartools/pressure_calibration/: index.html
dev/api/polartools/process_images/: index.html
dev/api/polartools/xmcd_gui/: index.html
dev/examples/: absorption.html  diffraction.html  load_data.html  manage_database.html  pressure_calibration.html  process_images.html  xmcd_gui.html
docs/: requirements.txt
docs/source/: API.rst  conf.py  index.md  index.rst  installation.md  installation.rst  quickstart.md  release-history.rst  usage.rst
docs/source/API/: _absorption.rst  _area_detector_handlers.rst  _db_tools.rst  _diffraction.rst  _hkl_utils.rst  _load_data.rst  _manage_database.rst  _pressure_calibration.rst  _process_images.rst  index.rst
docs/source/examples/: diffraction.md  manage_database.md  process_images.md  xmcd_gui.md
latest/: genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  release-history.html  search.html  searchindex.js
latest/_modules/: index.html
latest/_modules/polartools/: absorption.html  area_detector_handlers.html  diffraction.html  load_data.html  manage_database.html  pressure_calibration.html  process_images.html
latest/_sources/api/polartools/absorption/: index.rst.txt
latest/_static/: documentation_options.js
latest/api/polartools/: index.html
latest/api/polartools/absorption/: index.html
latest/api/polartools/area_detector_handlers/: index.html
latest/api/polartools/diffraction/: index.html
latest/api/polartools/load_data/: index.html
latest/api/polartools/manage_database/: index.html
latest/api/polartools/pressure_calibration/: index.html
latest/api/polartools/process_images/: index.html
latest/api/polartools/xmcd_gui/: index.html
latest/examples/: absorption.html  diffraction.html  load_data.html  manage_database.html  pressure_calibration.html  process_images.html  xmcd_gui.html
polartools/: __init__.py  _larch.py  _pyrixs.py  _version.py  absorption.py  area_detector_handlers.py  db_tools.py  diffraction.py  hkl_utils.py  load_data.py  manage_database.py  plotting.py  pressure_calibration.py  process_data.py  process_images.py  xmcd_gui.py
polartools/devices/: ad_eiger1M.py  ad_lightfield.py  ad_mixins.py  ad_vimba.py  aps_phase_shifter.py  aps_status.py  aps_undulator.py  aps_xbpm.py  caen_power_supply.py  camera_4ida_down.py  camera_4ida_up.py  camera_4idb.py  camera_xrayeye.py  chopper_device.py  counters_class.py  data_management.py  diamond_window_table.py  electromagnet.py  energy_device.py  filters_device.py  filters_device_avs.py  filters_device_new.py  flags.py  ge_controller.py  hhl_mirror.py  huber_filter.py  interferometers_4IDG.py  jj_slits.py  kb_mirrors.py  labjacks.py  lakeshore_gaussmeter.py  lakeshores_temperature.py  laser_sample_stage.py  magnet_kepco_4idb.py  magnet_kepco_4idg.py  magnet_nanopositioner.py  mono_feedback.py  monochromator.py  monochromator_old.py  nanopositioner.py  (+31 more)
polartools/tests/: __init__.py  conftest.py  test_absorption.py  test_area_detector_handlers.py  test_db_tools.py  test_diffraction.py  test_larch.py  test_load_data.py  test_manage_database.py  test_polartools.py  test_pressure_calibration.py  test_process_images.py  test_pyrixs.py  test_xmcd_gui.py
polartools/tests/data_for_test/: scan_000025_master.hdf
polartools/tests/data_for_test/csv/: scan_1049_baseline.csv  scan_1049_meta.json  scan_1049_primary.csv
polartools/tests/data_for_test/databroker/: catalog.yml  documents_manifest.txt
polartools/tests/data_for_test/lambda250k/: catalog.yml  documents_manifest.txt  external_files_manifest_2c28fdf2cb13e0efe678126fd37a92c3.txt
v0.6.0/: genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  release-history.html  search.html
v0.6.0/_modules/: index.html
v0.6.0/_modules/polartools/: absorption.html  area_detector_handlers.html  diffraction.html  load_data.html  manage_database.html  pressure_calibration.html  process_images.html
v0.6.0/_sources/: release-history.md.txt
v0.6.0/_sources/api/polartools/: index.rst.txt
v0.6.0/_sources/examples/: absorption.md.txt
v0.6.0/api/polartools/: index.html
v0.6.0/api/polartools/absorption/: index.html
v0.6.0/api/polartools/area_detector_handlers/: index.html
v0.6.0/api/polartools/diffraction/: index.html
v0.6.0/api/polartools/load_data/: index.html
v0.6.0/api/polartools/manage_database/: index.html
v0.6.0/api/polartools/pressure_calibration/: index.html
v0.6.0/api/polartools/process_images/: index.html
v0.6.0/api/polartools/xmcd_gui/: index.html
v0.6.0/examples/: absorption.html  diffraction.html  load_data.html  manage_database.html  pressure_calibration.html  process_images.html  xmcd_gui.html
(+59 files in other folders)
